--- a/landing-page/style.css
+++ b/landing-page/style.css
@@ -10,7 +10,6 @@ body {
     display: flex;
     flex-direction: row;
     background-color: #1f2937;
-    gap: 100px;
     justify-content: space-between;
 }
 
@@ -43,4 +42,52 @@ body {
     margin-bottom: 10px;
     margin-top: 10px;
     align-items: center;
+}
+
+.description {
+    display: flex;
+    flex-direction: row;
+    background-color: #1f2937;
+    justify-content: space-between;
+}
+
+.description .left {
+    display: flex;
+    flex-direction: column;
+    background-color: #1f2937;
+    justify-content: center;
+    gap: 2px;
+    margin-left: 130px;
+    margin-right: 130px;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    align-items: baseline;
+}
+
+.description .left .text1 {
+    display: flex;
+    flex-direction: column;
+    color: #f9faf8;
+    font-family: sans-serif;
+    font-size: 25px;
+    font-weight: bolder;
+    background-color: #1f2937;
+}
+
+.description .left .text2 {
+    display: flex;
+    flex-direction: column;
+    color: #f9faf8;
+    font-family: sans-serif;
+    font-size: 10px;
+    background-color: #1f2937;
+}
+
+.description .left .button {
+    display: flex;
+    flex-direction: column;
+    color: #f9faf8;
+    font-family: sans-serif;
+    font-size: 10px;
+    background-color: #3882f6;
 }
