--- a/landing-page/style.css
+++ b/landing-page/style.css
@@ -23,7 +23,7 @@ body {
     font-weight: bold;
     margin-left: 130px;
     margin-top: 10px;
-    margin-bottom: 10px;
+    align-items: baseline;
 }
 
 .link {
@@ -39,8 +39,8 @@ body {
     gap: 20px;
     font-family: sans-serif;
     margin-right: 130px;
-    margin-bottom: 10px;
     margin-top: 10px;
+    justify-items:flex-end;
     align-items: center;
 }
 
@@ -49,6 +49,8 @@ body {
     flex-direction: row;
     background-color: #1f2937;
     justify-content: space-between;
+    align-items: center;
+    height: 315px;
 }
 
 .description .left {
@@ -56,12 +58,11 @@ body {
     flex-direction: column;
     background-color: #1f2937;
     justify-content: center;
-    gap: 2px;
+    gap: 10px;
+    width: 280px;
     margin-left: 130px;
-    margin-right: 130px;
-    margin-top: 50px;
-    margin-bottom: 50px;
-    align-items: baseline;
+    margin-right: 30px;
+    align-items:flex-start;
 }
 
 .description .left .text1 {
@@ -88,6 +89,83 @@ body {
     flex-direction: column;
     color: #f9faf8;
     font-family: sans-serif;
+    font-weight: bold;
     font-size: 10px;
     background-color: #3882f6;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-left: 15px;
+    padding-right: 15px;
+    border-radius: 5px;
+    border: 0px;
+}
+
+.description .right {
+    display: flex;
+    color: white;
+    font-family: sans-serif;
+    font-size: 10px;
+    background-color: rgb(99, 99, 99);
+    justify-content: center;
+    align-items: center;
+    width: 200px;
+    height: 150px;
+    margin-right: 130px;
+    padding-left: 70px;
+    padding-right: 70px;
+}
+
+.information {
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    /*justify-content: center;*/
+    align-items: center;
+    height: 315px;
+}
+
+.information .top {
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    justify-content: center;
+    align-items: center;
+    height: 100px;
+    font-size: 23px;
+    font-weight: bolder;
+    color: #1f2937;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.information .bottom {
+    display: flex;
+    flex-direction: row;
+    gap: 30px;
+    justify-content: center;
+    align-items: center;
+    width: 300px;
+}
+
+.information .bottom .container {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    justify-content: stretch;
+    align-items: stretch;
+}
+
+.information .bottom .container .image {
+    display: flex;
+    height: 105px;
+    width: 100px;
+    border: 3px solid;
+    border-color: #3882f6;
+    border-radius: 10px;
+}
+
+.information .bottom .container .text {
+    display: flex;
+    font-size: 12px;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align:center;
 }
